Improvements to economy.coder; now returns pandas Series if one is passed

--- a/wbgapi/lookup-data.yaml
+++ b/wbgapi/lookup-data.yaml
@@ -21,12 +21,14 @@ CIV:
 - C..?te d.?Ivoire
 COD:
 - Congo Democratic Republic
-- Democratic Republic of (the )?Congo
+- Dem(ocratic)? Rep(ublic)? of (the )?Congo
 COG:
 - Congo Republic
 - :Congo
 CPV:
 - Cape Verde
+CUW:
+- Cura..?ao
 CZE:
 - Czech
 - Czechia
@@ -55,6 +57,7 @@ KGZ:
 KOR:
 - Korea Republic
 - :Republic of Korea
+- :Korea
 - South Korea
 - Korea South
 - S Korea
@@ -76,6 +79,7 @@ PRK:
 - North Korea
 - Korea North
 - N Korea
+- DPR (of )?Korea
 PSE:
 - Palestine
 RUS:
